# ai-ml

fourth/: exercise.py  exercise_scikit_learn.py  lr_numpy_sklearn.ipynb  main.py  pyproject.toml
week-7/: KNN_NumPy_vs_ScikitLearn.ipynb  pyproject.toml
week-7/exercise/: __main__.py  numpy.py  shared.py  sklearn.py
week-7/sample/: numpy.py  shared.py  sklearn.py
